--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Natanael Maciel - Portfólio"/>
-  <meta property="og:image" content="https://natanaelm.github.io/img/card.png"/>
+  <meta property="og:image" content="https://natanaelm.github.io/img/banner.png"/>
   <meta property="og:image:alt" content="Cartão de visita"/>
   <meta property="og:url" content="https://natanaelm.github.io/"/>
   <meta property="og:site_name" content="Natanael Maciel | Portfólio"/>
