--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
   <meta property="og:site_name" content="Natanael Maciel | Portfólio"/>
   <meta property="og:description" content="Portfólio de Natanael Maciel, Desenvolvedor Web, no GitHub Pages."/>
 
-  <meta name="theme-color" content="#008DFF"/>
+  <meta name="theme-color" content="#505"/>
   <link rel="stylesheet" href="sty.css"/>
 
   <link rel="icon" href="img/n.png"/>
   <style>
-h1,h2,h3{color:#008DFF}
+h2,h3{color:#505}
 
-.skils{padding:8px;margin:1px;border-radius:4px;color:#fff;display:inline-block}
+.wh{color:#fff;text-shadow:0 0 2px #303}
+.skils{padding:8px;margin:2px;border-radius:4px;color:#fff;display:inline-block}
 
+#ini{font-size:1.1rem}
+#hdr{background-image:url('img/pg.svg');background-position:center;background-size:cover}
   </style>
 </head><body>
-<header class="mtext">
-  <h1 style="font-variant:small-caps">Natanael Maciel</h1>
-  <h3>Desenvolvedor Web</h3>
-  <p>Trabalho na construção de sites, blogs, landing pages, entre outras aplicações da internet que atuam ao lado do cliente.</p>
+<header class="mtext" id="hdr">
+  <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
+  <p class="wh" id="ini">Desenvolvedor Web / Programador</p>
 </header>
 <h2>Projetos</h2>
 <div id="que">
@@ -43,10 +45,11 @@ h1,h2,h3{color:#008DFF}
     </div>
   </div>
   <div class="qel">
-    <img src="portif/deliveri/img/ic-img.png" alt="Icone de Sanduiche"/>
+    <img src="portif/deep-clean/img/ic-img.png" alt="Ícone"/>
     <div>
-      <h3>DeliVery</h3>
-      <p>Projeto de restaurante (em andamento)</p>
+      <h3>Deep Clean</h3>
+      <p>Projeto de empresa de Higienização de Estofados (fase beta)</p>
+      <a class="alk" href="portif/deep-clean/index.html">ver projeto &#10095;</a>
     </div>
   </div>
 </div>
@@ -56,13 +59,13 @@ h1,h2,h3{color:#008DFF}
 <p>
   <span class="skils" style="background:#f44336">HTML</span>
   <span class="skils" style="background:#009688">CSS</span>
-  <span class="skils" style="background:#fdd835;color:#000">JavaScript</span>
+  <span class="skils" style="background:#fdd835;color:#202020">JavaScript</span>
   <span class="skils" style="background:#BE8EC4">PHP</span>
   <span class="skils" style="background:#1678CE">Python</span>
   <span class="skils" style="background:#60a591">SQL</span>
   <span class="skils" style="background:#888">C/C++</span>
 </p>
-<p>E também conheço as tecnologias:</p>
+<p>Outras tecnologias que uso:</p>
 <p>
   <span class="skils" style="background:#91c800">NodeJS</span>
   <span class="skils" style="background:#0046a5">Linux</span>
@@ -72,7 +75,7 @@ h1,h2,h3{color:#008DFF}
 <div id="soc">
   <a style="background:#1666c5" href="https://www.linkedin.com/in/natanael-maciel-82b006204">LinkedIn</a>
 <!--
-  <a style=";background-color:#c13584;background-image:linear-gradient(left,#fcaf45,#c13584);background-image:-webkit-linear-gradient(left,#fcaf45,#c13584)" href="https://www.instagram.com/invites/contact/?i=19jiqrndk1hx6&utm_content=mfyzmrr">Instagram</a>
+  <a style="background-color:#c13584;background-image:linear-gradient(left,#fcaf45,#c13584);background-image:-webkit-linear-gradient(left,#fcaf45,#c13584)" href="https://www.instagram.com/invites/contact/?i=19jiqrndk1hx6&utm_content=mfyzmrr">Instagram</a>
 -->
   <a style="background:#1877f2" href="https://www.facebook.com/natanael.maciel.3950">Facebook</a>
   <a style="background:#171515" href="https://github.com/natanaelm/natanaelm">GitHub</a>
