--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 h2,h3{color:#505}
 
 .wh{color:#fff;text-shadow:0 0 2px #303}
-.skils{padding:8px;margin:2px;border-radius:4px;color:#fff;display:inline-block}
+.skils{padding:8px;margin:2px;border-radius:4px;color:#fff;background-color:#505;display:inline-block}
 
 #ini{font-size:1.1rem}
 #hdr{background-image:url('img/pg.svg');background-position:center;background-size:cover}
@@ -32,51 +32,41 @@ h2,h3{color:#505}
 </head><body>
 <header class="mtext" id="hdr">
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
-  <p class="wh" id="ini">Desenvolvedor Web / Programador</p>
+  <p class="wh" id="ini">Profissional de limpeza de estofados, tendo música e programação como hobbys.</p>
 </header>
-<h2>Projetos</h2>
+<h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
-    <img src="portif/joao-lucas/img/icon-image.png" alt="Icone João Lucas"/>
-    <div>
-      <h3>João Lucas Designer</h3>
-      <p>Manual de Identidade Visual</p>
-      <a class="alk" href="portif/joao-lucas/index.html">ver projeto &#10095;</a>
-    </div>
-  </div>
-  <div class="qel">
-    <img src="portif/deep-clean/img/ic-img.png" alt="Ícone"/>
+    <img src="portif/deep-clean/img/icon.png" alt="Ícone"/>
     <div>
       <h3>Deep Clean</h3>
-      <p>Projeto de empresa de Higienização de Estofados (fase beta)</p>
+      <p>Site de empresa de Higienização de Estofados</p>
       <a class="alk" href="portif/deep-clean/index.html">ver projeto &#10095;</a>
     </div>
   </div>
 </div>
 
 <h2>Habilidades</h2>
-<p>Tenho conhecimento em:</p>
+<p>Conheço as seguintes linguagens:</p>
 <p>
-  <span class="skils" style="background:#f44336">HTML</span>
-  <span class="skils" style="background:#009688">CSS</span>
-  <span class="skils" style="background:#fdd835;color:#202020">JavaScript</span>
-  <span class="skils" style="background:#BE8EC4">PHP</span>
-  <span class="skils" style="background:#1678CE">Python</span>
-  <span class="skils" style="background:#60a591">SQL</span>
-  <span class="skils" style="background:#888">C/C++</span>
+  <span class="skils">HTML</span>
+  <span class="skils">CSS</span>
+  <span class="skils">JavaScript</span>
+  <span class="skils">PHP</span>
+  <span class="skils">Python</span>
+  <span class="skils">SQL</span>
+  <span class="skils">C/C++</span>
 </p>
 <p>Outras tecnologias que uso:</p>
 <p>
-  <span class="skils" style="background:#91c800">NodeJS</span>
-  <span class="skils" style="background:#0046a5">Linux</span>
+  <span class="skils">NodeJS</span>
+  <span class="skils">Linux</span>
 </p>
 
 <h2>Social</h2>
 <div id="soc">
   <a style="background:#1666c5" href="https://www.linkedin.com/in/natanael-maciel-82b006204">LinkedIn</a>
-<!--
-  <a style="background-color:#c13584;background-image:linear-gradient(left,#fcaf45,#c13584);background-image:-webkit-linear-gradient(left,#fcaf45,#c13584)" href="https://www.instagram.com/invites/contact/?i=19jiqrndk1hx6&utm_content=mfyzmrr">Instagram</a>
--->
+  <a style="background-image:linear-gradient(to right,#fcaf45,#c13584);background-color:#c13584" href="https://www.instagram.com/natanael.m.p">Instagram</a>
   <a style="background:#1877f2" href="https://www.facebook.com/natanael.maciel.3950">Facebook</a>
   <a style="background:#171515" href="https://github.com/natanaelm/natanaelm">GitHub</a>
 </div>
