--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -35,11 +35,12 @@
     <h3 class="bl">Higienização de Estofados</h3><br/>
     <strong class="bl">(93) 99166-0016</strong>
   </div>
-  <p class="skb">
-    <a class="mbtn" href="tel:+5593991660016"><img src="img/telefone-b.png" class="ic" alt="Telefone"/> Ligar</a>
-    <a class="mbtn" href="https://wa.me/559391660016"><img src="img/whatsapp-b.png" class="ic" alt="WhatsApp"/> WhatsApp</a>
-  </p>
 </header>
+
+<div id="bar1" class="skb">
+  <a class="mbtn" href="tel:+5593991660016"><img src="img/telefone-b.png" class="ic" alt="Telefone"/> Ligar</a>
+  <a class="mbtn" href="https://wa.me/559391660016"><img src="img/whatsapp-b.png" class="ic" alt="WhatsApp"/> WhatsApp</a>
+</div>
 
 <section>
   <p class="htx">Pensando na sua saúde e da sua família, trabalhamos com serviço de higienização especializado em estofados, o que inclui:
