--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -82,9 +82,8 @@
 </section>
 
 <section>
-  <h2 class="bl">Limpeza e Desinfecção</h2>
-  <p>Veja a diferença que uma higienização pode fazer em um estofado:</p>
-<!--  <img alt="estofado após higienização"/> -->
+  <h2 class="bl">Atendimento em sua casa</h2>
+  <p>Vamos até você para realizar o serviço. Atendemos em Santarém - Pará</p>
 </section>
 
 <section class="skb">
