--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h2,h3{color:#505}
 </head><body>
 <header class="mtext" id="hdr">
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
-  <p class="wh" id="ini">Lavandeiro, Desenvolvedor e Músico.</p>
+  <p class="wh" id="ini">Desenvolvedor Web</p>
 </header>
 <h2>Meus Projetos</h2>
 <div id="que">
