--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ h2,h3{color:#505}
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
   <p class="wh" id="ini">Desenvolvedor Web</p>
 </header>
+<p>Neste site você vai encontrar projetos de programação e outras coisas relacionadas ao que gosto de fazer, como editar música.</p>
 <h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
@@ -46,8 +47,8 @@ h2,h3{color:#505}
   </div>
 </div>
 
-<h2>Habilidades</h2>
-<p>Conheço as seguintes linguagens:</p>
+<h2>Conhecimentos</h2>
+<p>Meus conhecimentos em desenvolvimento de sites segue o padrão de "programação raiz", em que uso os elementos básicos para criar, sem uso de frameworks. Nada muito profissional, mas também nada amador.</p>
 <p>
   <span class="skils">HTML</span>
   <span class="skils">CSS</span>
