--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@ h2,h3{color:#505}
 .wh{color:#fff;text-shadow:0 0 2px #303}
 .skils{padding:8px;margin:2px;border-radius:4px;color:#fff;background-color:#505;display:inline-block}
 
-#ini{font-size:1.1rem}
+.ini{font-size:1.1rem}
 #hdr{background-image:url('img/pg.svg');background-position:center;background-size:cover}
   </style>
 </head><body>
 <header class="mtext" id="hdr">
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
-  <p class="wh" id="ini">Desenvolvedor Web</p>
+  <p class="wh ini">Desenvolvedor Web</p>
 </header>
-<p>Neste site você vai encontrar projetos de programação e outras coisas relacionadas ao que gosto de fazer, como editar música.</p>
+<p class="ini">Neste site você vai encontrar projetos de programação e outras coisas relacionadas ao que gosto de fazer, como editar música.</p>
 <h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
     <img src="portif/deep-clean/img/icon.png" alt="Ícone"/>
     <div>
-      <h3>Deep Clean</h3>
+      <h3>DeepClean</h3>
       <p>Site de empresa de Higienização de Estofados</p>
       <a class="alk" href="portif/deep-clean/index.html">ver projeto &#10095;</a>
     </div>
@@ -48,7 +48,7 @@ h2,h3{color:#505}
 </div>
 
 <h2>Conhecimentos</h2>
-<p>Meus conhecimentos em desenvolvimento de sites segue o padrão de "programação raiz", em que uso os elementos básicos para criar, sem uso de frameworks. Nada muito profissional, mas também nada amador.</p>
+<p>Meus conhecimentos em desenvolvimento de sites segue o padrão de "programação raiz", em que uso os elementos básicos para criar, sem uso de frameworks:</p>
 <p>
   <span class="skils">HTML</span>
   <span class="skils">CSS</span>
