--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h2,h3{color:#505}
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
   <p class="wh ini">Desenvolvedor Web</p>
 </header>
-<p class="ini">Neste site você vai encontrar projetos de programação e outras coisas relacionadas ao que gosto de fazer, como editar música.</p>
+<p class="ini">Neste site você vai encontrar projetos de programação e outros hobbys</p>
 <h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
@@ -63,6 +63,7 @@ h2,h3{color:#505}
 </p>
 
 <h2>Social</h2>
+<p>Minhas redes sociais para contato, interação e entretenimento:</p>
 <div id="soc">
   <a style="background:#1666c5" href="https://www.linkedin.com/in/natanael-maciel-82b006204">LinkedIn</a>
   <a style="background-image:linear-gradient(to right,#fcaf45,#c13584);background-color:#c13584" href="https://www.instagram.com/natanael.m.p">Instagram</a>
