--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h2,h3{color:#505}
 </div>
 
 <h2>Conhecimentos</h2>
-<p>Meus conhecimentos em desenvolvimento de sites segue o padrão de "programação raiz", em que uso os elementos básicos para criar, sem uso de frameworks:</p>
+<p>Meus conhecimentos em desenvolvimento de sites e programas de computador são baseados nas seguintes linguagens:</p>
 <p>
   <span class="skils">HTML</span>
   <span class="skils">CSS</span>
@@ -72,5 +72,4 @@ h2,h3{color:#505}
 </div>
 <br/>
 <footer class="bk">2021 - Natanael Maciel</footer>
-<script src="scr.js"></script>
 </body></html>
