--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="keywords" content="estofado,limpeza,lavagem,seco,higienizacao,colchao,sofa,cama,barato,deep,clean"/>
-  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados."/>
+  <meta name="keywords" content="estofado,limpeza,lavagem,seco,santarem,para,higienizacao,colchao,sofa,cama,barato,deep,clean"/>
+  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados em Santarém - Pará."/>
   <title>Limpeza e Higienização de Estofados | DeepClean</title>
 
-  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:card" content="summary_image"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="DeepClean"/>
-  <meta property="og:image" content="https://deepcleanstm.com.br/img/banner.png"/>
-  <meta property="og:image:alt" content="Estofado higienizado"/>
+  <meta property="og:image" content="https://deepcleanstm.com.br/img/icon.png"/>
+  <meta property="og:image:alt" content="Ícone de extratora azul"/>
   <meta property="og:url" content="https://deepcleanstm.com.br/"/>
   <meta property="og:site_name" content="DeepClean"/>
-  <meta property="og:description" content="Higienização de Estofados"/>
+  <meta property="og:description" content="Empresa de Higienização de Estofados"/>
 
   <meta name="theme-color" content="#004AAD"/>
 
