--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="keywords" content="estofado,limpeza,lavagem,seco,santarem,para,higienizacao,colchao,sofa,cama,barato,deep,clean"/>
-  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados em Santarém - Pará."/>
+  <meta name="keywords" content="estofado,limpeza,lavagem,seco,higienizacao,colchao,sofa,cama,barato,deep,clean"/>
+  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados."/>
   <title>Limpeza e Higienização de Estofados | DeepClean</title>
 
-  <meta name="twitter:card" content="summary_image"/>
+  <meta name="twitter:card" content="summary_large_image"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="DeepClean"/>
-  <meta property="og:image" content="https://deepcleanstm.com.br/img/icon.png"/>
-  <meta property="og:image:alt" content="Ícone de extratora azul"/>
+  <meta property="og:image" content="https://deepcleanstm.com.br/img/banner.png"/>
+  <meta property="og:image:alt" content="Estofado higienizado"/>
   <meta property="og:url" content="https://deepcleanstm.com.br/"/>
   <meta property="og:site_name" content="DeepClean"/>
-  <meta property="og:description" content="Empresa de Higienização de Estofados"/>
+  <meta property="og:description" content="Higienização de Estofados"/>
 
   <meta name="theme-color" content="#004AAD"/>
 
@@ -73,20 +73,26 @@
   </div>
 </section>
 
-<section class="blb" id="pr1">
-  <h2>Por que limpar seu estofado?</h2>
-  <p>Com o passar do tempo, poeira e outras sujeiras podem se acumular no tecido do seu estofado. Além disso, fungos e ácaros também podem estar presentes, podendo causar irritação e reações alérgicas.
-  </p>
-  <p>Por isso, é muito importante fazer uma limpeza dedicada para remover impurezas e restaurar a cor do tecido, deixando-o limpo e bonito de novo.
-  </p>
+<section class="bl" id="pr1">
+  <div>
+    <h2>Por que limpar seu estofado?</h2>
+    <p>Com o passar do tempo, poeira e outras sujeiras podem se acumular no tecido do seu estofado. Além disso, fungos e ácaros também podem estar presentes, podendo causar irritação e reações alérgicas.
+    </p>
+    <p>Por isso, é muito importante fazer uma limpeza dedicada para remover impurezas e restaurar a cor do tecido, deixando-o limpo e bonito de novo.
+    </p>
+  </div>
+  <figure>
+    <img alt="sofa branco" src="img/bg-sofa.png"/>
+    <figcaption>Um sofá limpo pode trazer bem-estar e conforto.</figcaption>
+  </figure>
 </section>
 
 <section>
   <h2 class="bl">Atendimento em sua casa</h2>
-  <p>Vamos até você para realizar o serviço. Atendemos em Santarém - Pará</p>
+  <p>Vamos até você para realizar o serviço. Atendemos em Santarém - Pará.</p>
 </section>
 
-<section class="skb">
+<section class="blb">
   <h2>Perguntas frequentes</h2>
   <details>
     <summary class="btn">O serviço prestado é lavagem a seco?</summary>
@@ -101,5 +107,8 @@
 </section>
 <br/>
 
-<footer class="blb">2022 - DeepClean</footer>
+<footer class="blb">
+  <span>2022 - DeepClean</span>
+  <a class="mbtn" href="https://instagam.com/deepclean_stm">Instagram</a>
+</footer>
 </body></html>
