--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="keywords" content="Natanael,Maciel,Portfolio,github,pages,site"/>
   <meta name="description" content="Portfólio de Natanael Maciel no GitHub Pages"/>
-  <meta name="author" content="Natanael Maciel"/>
   <title>Natanael Maciel - Portfólio</title>
 
   <meta name="twitter:card" content="summary_large_image"/>
@@ -16,25 +15,15 @@
   <meta property="og:site_name" content="Natanael Maciel | Portfólio"/>
   <meta property="og:description" content="Portfólio de Natanael Maciel, Desenvolvedor Web, no GitHub Pages."/>
 
-  <meta name="theme-color" content="#505"/>
+  <meta name="theme-color" content="#112b3c"/>
   <link rel="stylesheet" href="sty.css"/>
 
   <link rel="icon" href="img/n.png"/>
-  <style>
-h2,h3{color:#505}
-
-.wh{color:#fff;text-shadow:0 0 2px #303}
-.skils{padding:8px;margin:2px;border-radius:4px;color:#fff;background-color:#505;display:inline-block}
-
-.ini{font-size:1.1rem}
-#hdr{background-image:url('img/pg.svg');background-position:center;background-size:cover}
-  </style>
 </head><body>
 <header class="mtext" id="hdr">
   <h1 class="wh" style="font-variant:small-caps">Natanael Maciel</h1>
-  <p class="wh ini">Desenvolvedor Web</p>
+  <p class="wh" id="ini">Desenvolvedor Web</p>
 </header>
-<p class="ini">Neste site você vai encontrar projetos de programação e outros hobbys</p>
 <h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
@@ -47,8 +36,8 @@ h2,h3{color:#505}
   </div>
 </div>
 
-<h2>Conhecimentos</h2>
-<p>Meus conhecimentos em desenvolvimento de sites e programas de computador são baseados nas seguintes linguagens:</p>
+<h2>Habilidades</h2>
+<p>Conheço as seguintes linguagens:</p>
 <p>
   <span class="skils">HTML</span>
   <span class="skils">CSS</span>
@@ -63,13 +52,13 @@ h2,h3{color:#505}
 </p>
 
 <h2>Social</h2>
-<p>Minhas redes sociais para contato, interação e entretenimento:</p>
 <div id="soc">
-  <a style="background:#1666c5" href="https://www.linkedin.com/in/natanael-maciel-82b006204">LinkedIn</a>
-  <a style="background-image:linear-gradient(to right,#fcaf45,#c13584);background-color:#c13584" href="https://www.instagram.com/natanael.m.p">Instagram</a>
-  <a style="background:#1877f2" href="https://www.facebook.com/natanael.maciel.3950">Facebook</a>
-  <a style="background:#171515" href="https://github.com/natanaelm/natanaelm">GitHub</a>
+  <a href="https://www.linkedin.com/in/natanael-maciel-82b006204">LinkedIn</a>
+  <a href="https://www.instagram.com/natanael.m.p">Instagram</a>
+  <a href="https://www.facebook.com/natanael.maciel.3950">Facebook</a>
+  <a href="https://github.com/natanaelm/natanaelm">GitHub</a>
 </div>
 <br/>
-<footer class="bk">2021 - Natanael Maciel</footer>
+<footer class="bk">2022 - Natanael Maciel</footer>
+<script src="scr.js"></script>
 </body></html>
