--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -11,10 +11,10 @@
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="DeepClean"/>
   <meta property="og:image" content="https://deepcleanstm.com.br/img/banner.png"/>
-  <meta property="og:image:alt" content="Estofado higienizado"/>
+  <meta property="og:image:alt" content="icone de aspirador azul"/>
   <meta property="og:url" content="https://deepcleanstm.com.br/"/>
   <meta property="og:site_name" content="DeepClean"/>
-  <meta property="og:description" content="Higienização de Estofados"/>
+  <meta property="og:description" content="Serviço de Higienização de Estofados em Santarém"/>
 
   <meta name="theme-color" content="#004AAD"/>
 
@@ -23,24 +23,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet"/>
 
   <link rel="stylesheet" href="dc-sty.css"/>
-  <link rel="icon" href="img/icon.png"/>
-  <link rel="shortcut icon" href="img/icon.png"/>
+  <link rel="icon" href="icon.png"/>
+  <link rel="favicon" href="favicon.ico"/>
+  <link rel="shortcut icon" sizes="16x16" href="favicon-16x16.png"/>
 </head>
 
 <body>
 <header id="sofa">
   <div>
-    <h1 class="bl">DeepClean</h1>
-    <br/>
+    <h1 class="bl">DeepClean</h1><br/>
     <h3 class="bl">Higienização de Estofados</h3><br/>
-    <strong class="bl">(93) 99166-0016</strong>
+    <strong><img class="ic" src="img/telefone.png" alt="telefone"/> <a class="bl" href="tel:+5593991660016">(93) 99166-0016</a></strong>
   </div>
 </header>
-
-<div id="bar1" class="skb">
-  <a class="mbtn" href="tel:+5593991660016"><img src="img/telefone-b.png" class="ic" alt="Telefone"/> Ligar</a>
-  <a class="mbtn" href="https://wa.me/559391660016"><img src="img/whatsapp-b.png" class="ic" alt="WhatsApp"/> WhatsApp</a>
-</div>
+<a id="wbtn" href="https://wa.me/559391660016"><img src="img/whatsapp-b.png" alt="WhatsApp"/></a>
 
 <section>
   <p class="htx">Pensando na sua saúde e da sua família, trabalhamos com serviço de higienização especializado em estofados, o que inclui:
@@ -87,28 +83,47 @@
   </figure>
 </section>
 
-<section>
-  <h2 class="bl">Atendimento em sua casa</h2>
-  <p>Vamos até você para realizar o serviço. Atendemos em Santarém - Pará.</p>
-</section>
-
 <section class="blb">
   <h2>Perguntas frequentes</h2>
   <details>
     <summary class="btn">O serviço prestado é lavagem a seco?</summary>
-    <p>Não, porque usamos produtos líquidos para fazer a limpeza.</p>
+    <p>Não, porque usamos produtos líquidos e água para fazer a limpeza.</p>
   </details>
-
+  <details>
+    <summary class="btn">Quanto tempo demora para secar?</summary>
+    <p>Quanto mais sujeira, mais água é usada no processo, por isso o tempo de secagem varia entre:</p>
+    <ul>
+      <li>3 a 6 horas, para sujidade leve;</li>
+      <li>6 a 12 horas, para sujidade média;</li>
+      <li>12 a 48 horas, para sujidade pesada.</li>
+    </ul>
+    <small>* o tempo pode variar de acordo com a temperatura e umidade.</small>
+  </details>
   <details>
     <summary class="btn">Tenho de limpar meu estofado com que frequencia?</summary>
-    <p>Geralmente de 3 a 6 meses.</p>
+    <p>Geralmente de 3 a 6 meses é o recomendado.</p>
+  </details>
+  <details>
+    <summary class="btn">Os produtos usados causam alguma alergia?</summary>
+    <p>O que causa alergia é deixar excessos de produto. Cuidamos para que não fique nenhum produto que possa causar irritação.</p>
   </details>
   
 </section>
-<br/>
+
+<section>
+  <h3 class="bl">Atendimento</h3>
+  <p>Realizamos o serviço em sua residência. Estamos em Santarém, Pará.</p>
+</section>
+
+<section class="bl">
+  <h3>Formas de pagamento</h3>
+  <span><img class="icb" src="img/dinheiro.png" alt="dinheiro"/> Dinheiro </span>
+  <span><img class="icb" src="img/pix.png" alt="pix"/> Pix </span>
+  <span><img class="icb" src="img/credit-card.png" alt="cartao"/> Cartão </span>
+</section>
 
 <footer class="blb">
   <span>2022 - DeepClean</span>
-  <a class="mbtn" href="https://instagam.com/deepclean_stm">Instagram</a>
+  <a class="mbtn" href="https://instagam.com/deepclean_stm"><img alt="instagram logo branco" class="ic" src="img/instagram.png" /> Instagram</a>
 </footer>
 </body></html>
