add sofa image; rounded corners

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h2>Meus Projetos</h2>
 <div id="que">
   <div class="qel">
-    <img src="portif/deep-clean/img/icon.png" alt="Ícone"/>
+    <img src="portif/deep-clean/icon.png" alt="Ícone"/>
     <div>
       <h3>DeepClean</h3>
       <p>Site de empresa de Higienização de Estofados</p>
