--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -33,10 +33,11 @@
   <div>
     <h1 class="bl">DeepClean</h1><br/>
     <h3 class="bl">Higienização de Estofados</h3><br/>
-    <strong><img class="ic" src="img/telefone.png" alt="telefone"/> <a class="bl" href="tel:+5593991660016">(93) 99166-0016</a></strong>
+    <strong><img class="ic" src="img/telefone.png" alt="telefone"/> <a class="bl" href="tel:+5593991660016" title="Ligar para a DeepClean">(93) 99166-0016</a></strong>
   </div>
 </header>
-<a id="wbtn" href="https://wa.me/559391660016"><img src="img/whatsapp-b.png" alt="WhatsApp"/></a>
+
+<a id="wbtn" href="https://wa.me/559391660016" title="WhatsApp"><img src="img/whatsapp-b.png" alt="WhatsApp"/></a>
 
 <section>
   <p class="htx">Pensando na sua saúde e da sua família, trabalhamos com serviço de higienização especializado em estofados, o que inclui:
@@ -44,27 +45,27 @@
   <div class="prod">
     <div>
       <img src="img/sofa.png" alt="sofa"/>
-      <strong>sofás, poltronas, cadeiras</strong>
+      <strong class="bl">sofás, poltronas, cadeiras</strong>
     </div>
     <div>
       <img src="img/cama.png" alt="colchão"/>
-      <strong>colchões, berços</strong>
+      <strong class="bl">colchões, berços</strong>
     </div>
     <div>
       <img src="img/tapete.png" alt="tapete"/>
-      <strong>tapetes, carpetes</strong>
+      <strong class="bl">tapetes, carpetes</strong>
     </div>
     <div>
       <img src="img/carro.png" alt="carro"/>
-      <strong>automotivo, náutico</strong>
+      <strong class="bl">automotivo, náutico</strong>
     </div>
     <div>
       <img src="img/cadeirinha.png" alt="bebe conforto"/>
-      <strong>cadeirinhas, bebê-conforto</strong>
+      <strong class="bl">cadeirinhas, bebê-conforto</strong>
     </div>
     <div>
       <img src="img/almofada.png" alt="puff"/>
-      <strong>puffs e almofadas</strong>
+      <strong class="bl">puffs e almofadas</strong>
     </div>
   </div>
 </section>
@@ -124,6 +125,6 @@
 
 <footer class="blb">
   <span>2022 - DeepClean</span>
-  <a class="mbtn" href="https://instagam.com/deepclean_stm"><img alt="instagram logo branco" class="ic" src="img/instagram.png" /> Instagram</a>
+  <span>Limpeza | Qualidade | Bem-estar</span>
 </footer>
 </body></html>
