--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="DeepClean"/>
-  <meta property="og:image" content="https://deepcleanstm.com.br/img/banner.jpg"/>
+  <meta property="og:image" content="https://natanaelm.github.io/portif/deep-clean/img/banner.jpg"/>
   <meta property="og:image:alt" content="icone de aspirador azul"/>
   <meta property="og:url" content="https://deepcleanstm.com.br/"/>
   <meta property="og:site_name" content="DeepClean"/>
