--- a/portif/deep-clean/index.html
+++ b/portif/deep-clean/index.html
@@ -25,14 +25,14 @@
   <link rel="stylesheet" href="dc-sty.css"/>
   <link rel="icon" href="icon.png"/>
   <link rel="favicon" href="favicon.ico"/>
-  <link rel="shortcut icon" sizes="16x16" href="favicon-16x16.png"/>
+  <link rel="shortcut icon" sizes="16x16" href="img/favicon-16x16.png"/>
 </head>
 
 <body>
 <header id="sofa">
   <div>
     <h1 class="bl">DeepClean</h1><br/>
-    <h3 class="bl">Higienização de Estofados</h3><br/>
+    <h3 class="dk">Higienização de Estofados</h3><br/>
     <strong><img class="ic" src="img/telefone.png" alt="telefone"/> <a class="bl" href="tel:+5593991660016" title="Ligar para a DeepClean">(93) 99166-0016</a></strong>
   </div>
 </header>
@@ -70,10 +70,10 @@
   </div>
 </section>
 
-<section class="bl" id="pr1">
+<section class="dkb" id="pr1">
   <div>
     <h2>Por que limpar seu estofado?</h2>
-    <p>Com o passar do tempo, poeira e outras sujeiras podem se acumular no tecido do seu estofado. Além disso, fungos e ácaros também podem estar presentes, podendo causar irritação e reações alérgicas.
+    <p>Com o passar do tempo, poeira, gordura e outras sujeiras podem se acumular no tecido do seu estofado. Além disso, fungos e ácaros também podem estar presentes, podendo causar irritação e reações alérgicas.
     </p>
     <p>Por isso, é muito importante fazer uma limpeza dedicada para remover impurezas e restaurar a cor do tecido, deixando-o limpo e bonito de novo.
     </p>
@@ -84,11 +84,20 @@
   </figure>
 </section>
 
-<section class="blb">
+<section>
+  <h2 class="bl">Benefícios da DeepClean</h2>
+  <div>
+    <p><strong class="bl">Produtos de Qualidade: </strong>Usamos produtos profissionais que não agridem o tecido do estofado, de alta eficiencia e biodegradáveis;</p>
+    <p><strong class="bl">Remoção de Manchas e Odores: </strong>A higienização remove manchas de graxa, gordura, urina e outras impurezas do tecido.</p>
+    <p><strong class="bl">Garantia: </strong>Damos garantia de limpeza do estofado.</p>
+  </div>
+</section>
+
+<section class="dkb">
   <h2>Perguntas frequentes</h2>
   <details>
     <summary class="btn">O serviço prestado é lavagem a seco?</summary>
-    <p>Não, porque usamos produtos líquidos e água para fazer a limpeza.</p>
+    <p>Não, porque usamos produtos líquidos e água para fazer a limpeza. No entanto, a quantidade de água usada é pouca em comparação com os métodos de lavagem tradicionais.</p>
   </details>
   <details>
     <summary class="btn">Quanto tempo demora para secar?</summary>
@@ -122,6 +131,8 @@
   <span><img class="icb" src="img/pix.png" alt="pix"/> Pix </span>
   <span><img class="icb" src="img/credit-card.png" alt="cartao"/> Cartão </span>
 </section>
+
+<button class="blb" id="topBtn" onclick="window.scroll({top:0,behavior:'smooth'})">ir para o topo</button>
 
 <footer class="blb">
   <span>2022 - DeepClean</span>
