--- a/deep-clean/index.html
+++ b/deep-clean/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="keywords" content="estofado,limpeza,lavagem,seco,higienizacao,colchao,sofa,cama,barato,deep,clean"/>
-  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados."/>
-  <title>Limpeza e Higienização de Estofados | DeepClean</title>
+  <meta name="description" content="Serviço de limpeza, higienização e desinfecção de estofados em Santarém - Pará."/>
+  <title>Limpeza e Higienização de Estofados em Santarém | DeepClean</title>
 
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="og:type" content="website"/>
@@ -21,6 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="dc-sty.css"/>
   <link rel="icon" href="icon.png"/>
@@ -33,7 +34,10 @@
   <div>
     <h1 class="bl">DeepClean</h1><br/>
     <h3 class="dk">Higienização de Estofados</h3><br/>
-    <strong><img class="ic" src="img/telefone.png" alt="telefone"/> <a class="bl" href="tel:+5593991660016" title="Ligar para a DeepClean">(93) 99166-0016</a></strong>
+    <strong>
+      <img class="ic" src="img/telefone.png" alt="telefone"/>
+      <a class="bl" href="tel:+5593991660016" title="Ligar para a DeepClean">(93) 99166-0016</a>
+    </strong>
   </div>
 </header>
 
@@ -85,11 +89,29 @@
 </section>
 
 <section>
-  <h2 class="bl">Benefícios da DeepClean</h2>
-  <div>
-    <p><strong class="bl">Produtos de Qualidade: </strong>Usamos produtos profissionais que não agridem o tecido do estofado, de alta eficiencia e biodegradáveis;</p>
-    <p><strong class="bl">Remoção de Manchas e Odores: </strong>A higienização remove manchas de graxa, gordura, urina e outras impurezas do tecido.</p>
-    <p><strong class="bl">Garantia: </strong>Damos garantia de limpeza do estofado.</p>
+  <h2 class="bl">Benefícios da higienização</h2>
+  <div class="showBox">
+    <div>
+      <img src="img/sanitizer.svg" alt="limpeza">
+      <p>
+        <strong class="bl">Limpeza</strong>
+        Usamos produtos profissionais que não agridem o tecido do estofado, de alta eficiencia e biodegradáveis
+      </p>
+    </div>
+    <div>
+      <img src="img/workspace_premium.svg" alt="qualidade"/>
+      <p>
+        <strong class="bl">Qualidade</strong>
+        A higienização remove manchas de graxa, gordura, urina e outras impurezas do tecido, além de odores e mal cheiro
+      </p>
+    </div>
+    <div>
+      <img src="img/happy.svg" alt="bem-estar"/>
+      <p>
+        <strong class="bl">Bem-estar</strong>
+        Após a secagem seu estofado está livre de poeira, ácaros e outras coisas que causam alergia, sua casa fica mais limpa e a família toda se beneficia
+      </p>
+    </div>
   </div>
 </section>
 
@@ -132,10 +154,9 @@
   <span><img class="icb" src="img/credit-card.png" alt="cartao"/> Cartão </span>
 </section>
 
-<button class="blb" id="topBtn" onclick="window.scroll({top:0,behavior:'smooth'})">ir para o topo</button>
+<button class="blb" id="topBtn" title="voltar ao topo" onclick="window.scroll({top:0,behavior:'smooth'})">&uparrow;</button>
 
 <footer class="blb">
   <span>2022 - DeepClean</span>
-  <span>Limpeza | Qualidade | Bem-estar</span>
 </footer>
 </body></html>
