--- a/deep-clean/index.html
+++ b/deep-clean/index.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="dc-sty.css"/>
   <link rel="icon" href="icon.png"/>
@@ -44,7 +44,7 @@
 <a id="wbtn" href="https://wa.me/559391660016" title="WhatsApp"><img src="img/whatsapp-b.png" alt="WhatsApp"/></a>
 
 <section>
-  <p class="htx">Pensando na sua saúde e da sua família, trabalhamos com serviço de higienização especializado em estofados, o que inclui:
+  <p class="htx ctr">Pensando na sua saúde e da sua família, trabalhamos com serviço de higienização especializado em estofados, o que inclui:
   </p>
   <div class="prod">
     <div>
@@ -89,30 +89,42 @@
 </section>
 
 <section>
-  <h2 class="bl">Benefícios da higienização</h2>
+  <h2 class="bl ctr">O que a DeepClean oferece</h2>
   <div class="showBox">
     <div>
       <img src="img/sanitizer.svg" alt="limpeza">
       <p>
         <strong class="bl">Limpeza</strong>
-        Usamos produtos profissionais que não agridem o tecido do estofado, de alta eficiencia e biodegradáveis
+        Com o uso de produtos profissionais que não agridem o tecido do estofado, de alta eficiencia e biodegradáveis
       </p>
     </div>
     <div>
       <img src="img/workspace_premium.svg" alt="qualidade"/>
       <p>
         <strong class="bl">Qualidade</strong>
-        A higienização remove manchas de graxa, gordura, urina e outras impurezas do tecido, além de odores e mal cheiro
+        Profissionais treinados, equipamentos potentes e métodos de limpeza específicos
       </p>
     </div>
     <div>
       <img src="img/happy.svg" alt="bem-estar"/>
       <p>
         <strong class="bl">Bem-estar</strong>
-        Após a secagem seu estofado está livre de poeira, ácaros e outras coisas que causam alergia, sua casa fica mais limpa e a família toda se beneficia
+        Deixando seu estofado livre de poeira e impurezas, sua casa fica mais limpa e a família toda se beneficia
       </p>
     </div>
   </div>
+</section>
+
+<section class="ligth">
+  <h2>Nosso trabalho</h2>
+  <span>Veja mais no
+    <a id="insta" href="https://instagram.com/deepclean_stm"><img class="ic" alt="Instagram" src="img/instagram.png"/> Instagram</a>
+  </span>
+</section>
+
+<section>
+  <h3 class="bl">Atendimento</h3>
+  <p>Realizamos o serviço em sua residência. Estamos em Santarém, Pará.</p>
 </section>
 
 <section class="dkb">
@@ -139,12 +151,16 @@
     <summary class="btn">Os produtos usados causam alguma alergia?</summary>
     <p>O que causa alergia é deixar excessos de produto. Cuidamos para que não fique nenhum produto que possa causar irritação.</p>
   </details>
-  
 </section>
 
 <section>
-  <h3 class="bl">Atendimento</h3>
-  <p>Realizamos o serviço em sua residência. Estamos em Santarém, Pará.</p>
+  <p>Outras formas de pagamento:</p>
+  <div class="brands">
+    <img alt="pix" src="img/pix.png"/>
+    <span>PIX</span>
+    <img alt="cartão" src="img/credit-card.png" />
+    <span>CARTÃO (CRÉDITO / DÉBITO)</span>
+  </div>
 </section>
 
 <button class="blb" id="topBtn" title="voltar ao topo" onclick="window.scroll({top:0,behavior:'smooth'})">&uparrow;</button>
