--- a/deep-clean/index.html
+++ b/deep-clean/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="DeepClean"/>
-  <meta property="og:image" content="https://natanaelm.github.io/deep-clean/img/banner.jpg"/>
+  <meta property="og:image" content="https://natanaelm.github.io/deep-clean/img/banner.png"/>
   <meta property="og:image:alt" content="icone de aspirador azul"/>
   <meta property="og:url" content="https://deepcleanstm.com.br/"/>
   <meta property="og:site_name" content="DeepClean"/>
@@ -26,7 +26,8 @@
   <link rel="stylesheet" href="dc-sty.css"/>
   <link rel="icon" href="icon.png"/>
   <link rel="favicon" href="favicon.ico"/>
-  <link rel="shortcut icon" sizes="16x16" href="img/favicon-16x16.png"/>
+  <link rel="shortcut icon" sizes="16x16" href="favicon-16x16.png"/>
+  <link rel="shortcut icon" sizes="32x32" href="favicon-32x32.png"/>
 </head>
 
 <body>
@@ -48,7 +49,7 @@
   </p>
   <div class="prod">
     <div>
-      <img src="img/sofa.png" alt="sofa"/>
+      <img src="img/sofa.png" alt="sofá"/>
       <strong class="bl">sofás, poltronas, cadeiras</strong>
     </div>
     <div>
@@ -64,11 +65,11 @@
       <strong class="bl">automotivo, náutico</strong>
     </div>
     <div>
-      <img src="img/cadeirinha.png" alt="bebe conforto"/>
+      <img src="img/cadeirinha.png" alt="cadeira de bebê"/>
       <strong class="bl">cadeirinhas, bebê-conforto</strong>
     </div>
     <div>
-      <img src="img/almofada.png" alt="puff"/>
+      <img src="img/almofada.png" alt="almofada"/>
       <strong class="bl">puffs e almofadas</strong>
     </div>
   </div>
@@ -159,7 +160,7 @@
     <img alt="pix" src="img/pix.png"/>
     <span>PIX</span>
     <img alt="cartão" src="img/credit-card.png" />
-    <span>CARTÃO (CRÉDITO / DÉBITO)</span>
+    <span>Cartão de crédito / débito</span>
   </div>
 </section>
 
