--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
       </div>
     </div>
     <div class="qel">
-      <img src="deep-clean/img/happy.svg" alt="feliz"/>
+      <img src="ActSom/img/logo.png" alt="onda de audio ciano"/>
       <div>
-        <h3>Chegando</h3>
-        <p>Mais projetos estão sendo criados...</p>
+        <h3>ActSom</h3>
+        <p>Projeto para empresa de áudio</p>
+        <a href="ActSom/index.html">ver projeto</a>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h3></h3>
       </div>
     </div>
   </div>
@@ -75,5 +81,6 @@
     <a href="https://github.com/natanaelm/natanaelm">GitHub</a>
   </div>
 </section>
+<script src="index.js"></script>
 <footer class="dk">2024 - Natanael Maciel</footer>
 </body></html>
