--- a/ActSom/index.html
+++ b/ActSom/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Site para empresa de equipamentos sonoros">
 
   <title>ActSom</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +14,7 @@
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/logo.png">
 </head>
 
 <body>
